2008-06-19  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade: Move the delivery report checkbox below
	the message entry (Closes: #538375)

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_parse_data_uuid),
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data),
	(phonemgr_listener_delete_data): Change the retval from
	_parse_data_uuid() to avoid having to free the memory_type
	(fixes memory leaks)
	Use the same UUID format for calendar entries, but ignore the
	folder location element
	Fix getting the list of calendar items
	Implement getting calendar data (missing a function to transform
	the data into a vCal)

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c
	(phonemgr_listener_get_phonebook_entry),
	(phonemgr_listener_list_all_data): Fix reversed retval in
	_get_phonebook_entry, Use the entry location to create the UUID,
	avoids problems with memory offsets in drivers

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Remove debug
	* libgsm/phonemgr-listener.c (phonemgr_listener_list_all_data):
	Fixed another wrongly placed g_mutex_unlock()

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/glibgsmtest.c (main): Add support for setting the type
	of data required on the command-line

	* libgsm/phonemgr-listener.c
	(phonemgr_listener_set_cell_notification): Fix valgrind warning
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data):
	Add start of support for CALENDAR data in list_all_data, fix
	spurious mutex unlock in the get_data code

	* libgsm/phonemgr-utils.c (phonemgr_utils_connect): Fix some
	more valgrind warnings

2008-06-18  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c (phonemgr_listener_connect),
	(phonemgr_listener_get_phonebook_entry),
	(phonemgr_listener_get_data), (phonemgr_listener_list_all_data):
	Fix problem with phonebooks entries not being all consecutive
